- Added multi instance capability fir ads  - App opened ads added  - Callback added